# libntech_example

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
src/: argv_printer_seq.c
tests/unit/: Makefile.am  test_argv_lib.c
travis-scripts/: before_install.sh  script.sh
