AC_INIT([argv_printer], [0.0.1], [ole@northern.tech],
        [argv_printer], [http://northern.tech/])
AC_CANONICAL_TARGET

AM_PROG_AR
LT_INIT([disable-static])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/argv_printer.c])
AC_CONFIG_HEADERS([custom_config.h])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror foreign subdir-objects])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_CONFIG_MACRO_DIR([m4])

# Add more here

AC_OUTPUT
